--- a/tables.html
+++ b/tables.html
@@ -12,7 +12,7 @@
 
     </head>
 <body>
-    <h3 style="color: chocolate">Example of two different tables</h3>
+    <h3 style="color: chocolate">Example of three different tables</h3>
     <div class ="container">
         <h4>Table Simple</h4>
         <table class="table">
