--- a/columnIndexing.html
+++ b/columnIndexing.html
@@ -14,9 +14,15 @@
             <div class ="row">      <!--whenver you make a column it has to go into a row-->
                     <div class="col-md-4" style="background-color: red">LEFT</div>
                     <div class="col-md-4" style="background-color: blue">MIDDLE</div>
-                    <div class="col-md-4" style="background-color: blueviolet">RIGHT</div>
-                  
-                </div>
+                    <div class="col-md-4" style="background-color: blueviolet">RIGHT</div>          
+            </div>
+            <p>
+                <div class ="row">
+                    <div class="col-md-6" style="background-color: darkorange">ONE</div>
+                    <div class="col-md-6" style="background-color:rgb(24, 108, 177)">TWO</div>
+                </div> 
+            </p>
+            
             <hr>
             <p>Paragraph 1</p>
             <p>Paragraph 2</p>
